--- a/index.html
+++ b/index.html
@@ -6,11 +6,31 @@
     <title>voiidchat</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
-    <link rel="website icon" type="png" href="site.png">
+    <link rel="website icon" type="png" href="voiid.jpg">
 </head>
 <body>
-  
-    
+
+    <div class="navbar">
+       
+        <div class="logo">
+            <img src="voiid.jpg" alt="site logo">
+        </div>
+
+        <div class="sitename">
+            <h2>voiidchat</h2>
+        </div>
+    </div>
+
+    <main>
+        <div class="open">
+            <div class="part1 left">
+                <h3 id="use">Use voiidchat on your computer</h3>
+            </div>
+            <div class="part2 right">
+                <img src="qr.png" alt="random qr image" id="qr">
+            </div>
+        </div>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
