--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>voiidchat</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../CSS/style.css">
     <link rel="website icon" type="png" href="voiid.jpg">
 </head>
 <body>
@@ -13,7 +13,7 @@
     <div class="navbar">
        
         <div class="logo">
-            <img src="voiid.jpg" alt="site logo">
+            <img src="../GoodLook/voiid.jpg" alt="site logo">
         </div>
 
         <div class="sitename">
@@ -27,10 +27,10 @@
                 <h3 id="use">Use voiidchat on your computer</h3>
             </div>
             <div class="part2 right">
-                <img src="qr.png" alt="random qr image" id="qr">
+                <img src="../GoodLook/qr.png" alt="random qr image" id="qr">
             </div>
         </div>
     </main>
-    <script src="script.js"></script>
+    <script src="../JS/script.js"></script>
 </body>
 </html>
