Before Final State

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -25,7 +25,27 @@
         <div class="open">
             <div class="part1 left">
                 <h3 id="use">Use voiidchat on your computer</h3>
+                <h4 id="Guide1">
+                    1. Open Voiidchat on your Phone
+                </h4>
+
+                <h4 id="Guide2">
+                    2. Tap Menu &#8942; or Settings &#9881; and select Linked Devices
+                </h4>
+
+                <h4 id="Guide3">
+                    3. Tap Linked devices and then Link a device
+                </h4>
+
+                <h4 id="Guide4">
+                   4. Point your phone at this screen to capture the QR code
+                </h4>
+
+                <a href="#">
+                    <h5>Link with phone number</h5>
+                </a>
             </div>
+            
             <div class="part2 right">
                 <img src="../GoodLook/qr.png" alt="random qr image" id="qr">
             </div>
